CProgrammierung/eval_pipline/resources/testcases/bad/fail_invalid_id.stdin
duuosmfjx:k448vag9mf,ojdlnnjq,sjt2b0kqp,mtn
k448vag9mf:sjt2b0kqp,ojdlnnjq
U,=R$,NZ{>^}Y};-,?<A:sjt2b0kqp,r5pgzy8xc,k448vag9mf,hrnow4ytr24
r5pgzy8xc:sjt2b0kqp-735
hrnow4ytr24:r5pgzy8xc,nx4hvihcs6zbe
nx4hvihcs6zbe:r5pgzy8xc
8xu4g7hb0xl:nx4hvihcs6zbe,gegyxkwlx11myy5k2,hrnow4ytr24,u14jutju0fo
gegyxkwlx11myy5k2:u14jutju0fo,nx4hvihcs6zbe,opz0eezrwyf
u14jutju0fo:yxj7xpxxzdyu3
opz0eezrwyf:u14jutju0fo,yxj7xpxxzdyu3
6mhn7bkv6tjlz1rs3v:yxj7xpxxzdyu3,vhu,opz0eezrwyf,cv0sy2zsqigjeggd4fd2-88
vhu:yxj7xpxxzdyu3
cv0sy2zsqigjeggd4fd2:vhu
ai23q7ch:cv0sy2zsqigjeggd4fd2,vhu
0ixbissd9ivhx90xc:ai23q7ch,8frae0,cv0sy2zsqigjeggd4fd2,mn8vgp1qdn
8frae0:mn8vgp1qdn,ai23q7ch,8pwgwcc4pziunb1qi17f
8pwgwcc4pziunb1qi17f:mn8vgp1qdn,gac4akqn47k2aea45us
1k1sxjhdky:8pwgwcc4pziunb1qi17f,gac4akqn47k2aea45us,mn8vgp1qdn
gac4akqn47k2aea45us:p9jg3l4vkml
0nc3hp6:gac4akqn47k2aea45us,p9jg3l4vkml,1k1sxjhdky,smikjb90
p9jg3l4vkml:smikjb90
fclaekti:smikjb90,jxczipcdr,p9jg3l4vkml
jxczipcdr:smikjb90,mtn
e6vrgludedo:jxczipcdr,mtn,fclaekti,ojdlnnjq
mtn:ojdlnnjq
A:opz0eezrwyf
I:59
